--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["npm ci || npm install", "cd client && npm ci || npm install"]
 cmds = ["cd client && npm run build"]
 
 [start]
-cmd = "npm run start"
+cmd = "npm run db:migrate && npm run db:seed && npm run start"
