--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:server": "nodemon server/index.js",
     "dev:client": "cd client && npm run dev",
     "build": "cd client && npm run build",
-    "start": "node server/index.js",
+    "start": "node server/db/migrate.js && node server/db/seed.js && node server/index.js",
     "db:migrate": "node server/db/migrate.js",
     "db:seed": "node server/db/seed.js"
   },
