--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "pdfjs-dist": "^4.0.379",
+    "react-pageflip": "^2.0.3",
     "react-dropzone": "^14.2.3",
     "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
