--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,3 +9,6 @@ cmds = ["cd client && npm run build"]
 
 [start]
 cmd = "npm run db:migrate && npm run db:seed && npm run start"
+
+[variables]
+NODE_ENV = "production"
